--- a/infra/main/sonar-project.properties
+++ b/infra/main/sonar-project.properties
@@ -1,5 +1,5 @@
 # Required properties for Chayenity project
-sonar.projectKey=chayenity-server
+sonar.projectKey=hours-server
 sonar.projectName=Chayenity Server API
 sonar.projectVersion=1.0.0
 
@@ -13,7 +13,6 @@ sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/*.pyc, **/.venv/**, **/venv/**, **/__pycache__/**, **/migrations/**, **/uploads/**, **/scripts/**
 
 # Test and coverage information
-sonar.python.xunit.reportPaths=coverage.xml
 sonar.python.coverage.reportPaths=coverage.xml
 
 # Additional settings for Python
