--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -39,6 +39,7 @@ alembic = "^1.16.2"
 aiosqlite = "^0.21.0"
 pytest = "^8.4.2"
 pytest-asyncio = "^1.2.0"
+pytest-cov = "^6.0.0"
 
 [tool.black]
 line-length = 100
