--- a/server/.env.example
+++ b/server/.env.example
@@ -1,12 +1,13 @@
 ENVIRONMENT=local
-PROJECT_NAME=hourz
+PROJECT_NAME=HOURZ
 
 API_STR=/api
 
 REFRESH_SECRET_KEY=refresh_secret_key
+REFRESH_TOKEN_EXPIRE=90 # days
 ACCESS_SECRET_KEY=access_secret_key
+ACCESS_TOKEN_EXPIRE=10 # minutes
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE=10080
 
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:8000
