--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "pillow (>=10.0.0,<11.0.0)",
     "geoalchemy2 (>=0.18.0,<0.19.0)",
     "pysonar (>=1.2.0.2419,<2.0.0.0)",
+    "pydantic[email] (>=2.12.0,<3.0.0)",
 ]
 
 [build-system]
