--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "psycopg[binary] (>=3.2.9,<4.0.0)",
     "python-jose (>=3.5.0,<4.0.0)",
     "passlib (>=1.7.4,<2.0.0)",
-    "bcrypt (>=4.3.0,<5.0.0)",
+    "bcrypt (<4.1.0)",
     "sqlmodel (>=0.0.24,<0.0.25)",
     "tenacity (>=9.1.2,<10.0.0)",
     "graphviz (>=0.21,<0.22)",
